updating new codes

--- a/GUITARISR.html
+++ b/GUITARISR.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>LEARNING GUITAR</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
     <p>WELCOME IN YOUR JOURNEY FOR LEARNING GUITAR AND BEING A <strong><em><a href="https://en.wikipedia.org/wiki/Guitarist">GUITARIST</a></em></strong></p>
     <img src="https://www.devmusicalindia.in/assets_c/1581492074166-Belear%20BL38C%20Blue%20Burst%20Couturier%20Series%20Acoustic%20Guitar.jpg" alt="GUITAR IMAGE" height="400" width="200">
   </CENTER>
-<p><a href="patanahi kya.html">CONTACT DETAILS</a></p>
+  <p><a href="PATANAHI KYA.HTML">CONTACT DETAILS</a></p>
   <form action="mailto:imaginarymail@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="" value="YOUR NAME"><br><br>
