--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Anonymous Personal Site</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body style="background-color: POWDERBLUE;">
   <table cellspacing="40">
     <tbody>
       <tr>
@@ -24,7 +25,6 @@
         </td>
       </tr>
     </tbody>
-    <hr>
   </table>
   <hr size="2" noshade>
   <h3>QUALIFICATIONS</h3>
@@ -40,7 +40,7 @@
     </ol>
     <li>MUSICIAN</li>
     <ol type="I">
-      <li><a href="https://en.wikipedia.org/wiki/Guitarist">GUITARIST</a>(for more info) <em><a href="GUITARISR.html">:"GUITARIST":</a></em></li>
+      <li><a href="https://en.wikipedia.org/wiki/Guitarist">GUITARIST</a>(for more info) <em><a href="F:\WEB DEVELOPMENT\html-personal site\GUITARISR.html">:"GUITARIST":</a></em></li>
       <li>SINGER</li>
     </ol>
   </ul>
