--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </ol>
     <li>MUSICIAN</li>
     <ol type="I">
-      <li><a href="https://en.wikipedia.org/wiki/Guitarist">GUITARIST</a>(for more info) <em><a href="F:\WEB DEVELOPMENT\html-personal site\GUITARISR.html">:"GUITARIST":</a></em></li>
+      <li><a href="https://en.wikipedia.org/wiki/Guitarist">GUITARIST</a>(for more info) <em><a href="\GUITARISR.html">:"GUITARIST":</a></em></li>
       <li>SINGER</li>
     </ol>
   </ul>
